# flat_profiler

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: simple.py
flat_profiler/: __about__.py  __init__.py  flat_profiler.py  performance.py
tests/: test_flat_profiler.py
